// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Content - snapshots - can add custom class 1`] = `
preact-render-spy (1 nodes)
-------
<article class="content custom"></article>

`;

exports[`Content - snapshots - can render 1`] = `
preact-render-spy (1 nodes)
-------
<article class="content"></article>

`;

exports[`Content - snapshots - can render children 1`] = `
preact-render-spy (1 nodes)
-------
<article class="content">
  <p>Child 1</p>
  <p>Child 2</p>
</article>

`;
